missing values imputation

--- a/clicks-prediction.ipynb
+++ b/clicks-prediction.ipynb
@@ -277,6 +277,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_columns = ['hotel_id', 'city_id', 'content_score', 'n_images', 'distnace_to_center', 'avg_rating', 'stars', 'n_reviews', 'avg_rank', 'avg_price', 'avg_saving_percent', 'n_clicks']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -1070,16 +1079,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing values imputation using kNN...\n",
+      "Done.\n"
+     ]
+    }
+   ],
    "source": [
     "print('Missing values imputation using kNN...')\n",
-    "train_imputed = fast_knn(train, k=4)\n",
-    "test_imputed = fast_knn(test, k=4)\n",
+    "train = fast_knn(train, k=4)\n",
+    "test = fast_knn(test, k=4)\n",
     "print('Done.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_columns = ['hotel_id', 'city_id', 'content_score', 'n_images', 'distnace_to_center', 'avg_rating', 'stars', 'n_reviews', 'avg_rank', 'avg_price', 'avg_saving_percent', 'n_clicks']\n",
+    "test_columns = ['hotel_id', 'city_id', 'content_score', 'n_images', 'distnace_to_center', 'avg_rating', 'stars', 'n_reviews', 'avg_rank', 'avg_price', 'avg_saving_percent']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train.columns = train_columns\n",
+    "test.columns = test_columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train data set:\n",
+      "\n",
+      "All entries in train set have non-null hotel_id : True\n",
+      "All entries in train set have non-null city_id : True\n",
+      "All entries in train set have non-null content_score : True\n",
+      "All entries in train set have non-null n_images : True\n",
+      "All entries in train set have non-null distnace_to_center : True\n",
+      "All entries in train set have non-null avg_rating : True\n",
+      "All entries in train set have non-null stars : True\n",
+      "All entries in train set have non-null n_reviews : True\n",
+      "All entries in train set have non-null avg_rank : True\n",
+      "All entries in train set have non-null avg_price : True\n",
+      "All entries in train set have non-null avg_saving_percent : True\n",
+      "All entries in train set have non-null n_clicks : True\n",
+      "----------------------------------------------------------------------------------------------------\n",
+      "Test data set:\n",
+      "\n",
+      "All entries in test set have non-null hotel_id : True\n",
+      "All entries in test set have non-null city_id : True\n",
+      "All entries in test set have non-null content_score : True\n",
+      "All entries in test set have non-null n_images : True\n",
+      "All entries in test set have non-null distnace_to_center : True\n",
+      "All entries in test set have non-null avg_rating : True\n",
+      "All entries in test set have non-null stars : True\n",
+      "All entries in test set have non-null n_reviews : True\n",
+      "All entries in test set have non-null avg_rank : True\n",
+      "All entries in test set have non-null avg_price : True\n",
+      "All entries in test set have non-null avg_saving_percent : True\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_columns = list(train.columns)\n",
+    "print('Train data set:\\n')\n",
+    "for column in train_columns:\n",
+    "    print('All entries in train set have non-null', column ,':', ~train[column].isnull().any())\n",
+    "    \n",
+    "print('-'*100)\n",
+    "\n",
+    "test_columns = list(test.columns)\n",
+    "print('Test data set:\\n')\n",
+    "for column in test_columns:\n",
+    "    print('All entries in test set have non-null', column ,':', ~test[column].isnull().any())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "No more missing values!"
    ]
   },
   {
@@ -1089,6 +1188,13 @@
     "## 3. Exploratory data analysis\n",
     "<a id=\"eda\"></a>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
